# qwen-proxy-rs

./: .gitignore  CODEBASE_MAP.md  Cargo.toml  FIXES.md  README.md  opencode.json
.github/workflows/: build-ring-android.yml  build.yml  ci.yml
docs/residual-review-findings/: main-0cbc081.md
src/: constants.rs  http_client.rs  main.rs  perf_notes.md  qwen.rs  session.rs  streaming.rs  streaming_perf.rs
tests/: agents_sdk_test.ts  ai_sdk_test.mjs  contract_checklist.json  contract_checklist_test.mjs  live_agents_streaming_test.ts  openai_compat.rs  openai_sdk_compat_test.ts  pi_opencode_compat_test.ts  run_compat.sh  toolcall_stress_test.mjs
